[package]
name = "console-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16.1"
eframe = { version = "0.16.0" }
chrono = "0.4"
google-calendar3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "1.17.0", features = ["full"] }
base64 = "0.13.0"
input = "0.7.1"
nix = "0.23.1"
regex = "1.5.5"
